--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,6 @@
 @import './config';
+@import './weather';
+@import './search';
 
 * {
   margin: 0;
@@ -21,36 +23,27 @@ body {
   padding: 40px 35px;
 }
 
-.search {
-  width: 100%;
+.details {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 20px;
+  margin-top: 50px;
 
-  input {
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    color: #555;
-    padding: 10px 25px;
-    height: 60px;
-    border-radius: 30px;
-    flex: 1;
-    margin-right: 16px;
-    font-size: 18px;
-  }
-
-  button {
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
+  .col {
+    display: flex;
+    align-items: center;
+    text-align: left;
 
     img {
-      width: 30px;
+      width: 40px;
+      margin-right: 10px;
     }
   }
+
+  .humidity, .wind {
+    font-size: 28px;
+    margin-top: -6px;
+  }
 }
+
