--- a/css/main.css
+++ b/css/main.css
@@ -86,4 +86,12 @@ body {
 .details .humidity, .details .wind {
   font-size: 28px;
   margin-top: -6px;
+}
+
+.error {
+  text-align: left;
+  margin-left: 10px;
+  font-size: 14px;
+  margin-top: 10px;
+  display: none;
 }/*# sourceMappingURL=main.css.map */
